[project]
name = "GeoSeraphim"
version = "0.0.1dev20221205"
authors = [
  { name="Silverous Black", email="mail.silverousblack@gmail.com" },
]
description = "A centralized package for interfacing with geographical data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "GDAL > 3.0.0",
  "rasterio > 1.0.0",
  "numpy > 1.0.0",
  "pandas > 1.0.0",
  "Pillow > 9.0.0",
  "matplotlib > 3.0.0",
  "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/SilverousBlack/GeoSeraphim"
"Bug Tracker" = "https://github.com/SilverousBlack/GeoSeraphim/issues"
