[project]
name = "geoseraphim"
version = "0.0.1dev20221205"
authors = [
  { name="Silverous Black", email="mail.silverousblack@gmail.com" },
]
description = "A centralized package for interfacing with geographical data."
readme = "README.md"
requires-python = ">=3.7, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "GDAL > 3.0.0",
  "rasterio > 1.0.0",
  "numpy > 1.0.0",
  "pandas > 1.0.0",
  "Pillow > 9.0.0",
  "matplotlib > 3.0.0",
  "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/SilverousBlack/GeoSeraphim"
"Bug Tracker" = "https://github.com/SilverousBlack/GeoSeraphim/issues"

[tool.poetry]
name = "geoseraphim"
version = "0.0.1dev20221211"
description = "A centralized library for interfacing with geographical data."
authors = ["SilverousBlack <mail.silverousblack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.0.0"
pandas = "^1.5.0"
Pillow = "^9.0.0"
matplotlib = "^3.0.0"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
numpy = "^1.0.0"
pandas = "^1.5.0"
Pillow = "^9.0.0"
matplotlib = "^3.0.0"
seaborn = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
